--- a/html/index.html
+++ b/html/index.html
@@ -5,8 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Podcast CSS</title>
         <link rel="stylesheet" href="/css/styles.css">
-    </head>
+        <script src = "/js/scripts.js"></script>
     <body>
-
+        <h1 id="pod_titulo">Titulo</h1>
+        <h2 id="pod_descripcion">Texto 1</h2>
+        <img id="miImagen" src="../img/ESCUCHALO_AHORA.webp" alt="Imagen" width="300">
     </body>
 </html>
