Implementación basica de footer
Implementacion basica de footer

--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,15 @@
         <link rel="stylesheet" href="/css/styles.css">
         <script src = "/js/scripts.js"></script>
     <body>
+        <section id="footer"> <!-- Footer Principal  -->
+            <p>Podcast Diseño Web</p> 
+            <ul class="button-list">
+                <li><a href="#" class="button">Ver</a></li>
+                <li><a href="#" class="button">Episodios</a></li>
+                <li><a href="#" class="button">Botón 3</a></li>
+                <li><a href="#" class="button">Botón 4</a></li>
+            </ul>
+        </section>
         <h1 id="pod_titulo">Titulo</h1>
         <h2 id="pod_descripcion">Texto 1</h2>
         <img id="miImagen" src="../img/ESCUCHALO_AHORA.webp" alt="Imagen" width="300">
