--- a/html/index.html
+++ b/html/index.html
@@ -12,32 +12,29 @@
             <ul class="menu">
                 <li><a href="#sobre-nosotros">Sobre nosotros</a></li>
                 <li><a href="#contacto">Contacto</a></li>
-                <li>
-                    <a href="#video">Video</a>
-                    <span class="menu-icon">&#9776;</span> <!-- Ícono de menú -->
-                </li>
+                <li><a href="#video">Video</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section class="principal">
+        <section class="hero">
             <h1>¡ESCUCHALO AHORA!</h1>
             <p>Todo lo que necesitas saber sobre diseño web.</p>
-            <div class="reproductor">
+            <div class="player">
                 <button class="play">▶</button>
                 <span>Reproducir</span>
             </div>
         </section>
 
-        <section class="episodios">
-            <div class="episodio">
+        <section class="topics">
+            <div class="topic">
                 <img src="/img/diseñoWeb.png" alt="DiseñoWeb">
             </div>
-            <div class="episodio">
+            <div class="topic">
                 <img src="/img/javaScript.png" alt="JavaScript">
             </div>
-            <div class="episodio">
+            <div class="topic">
                 <img src="/img/html.png" alt="HTML">
             </div>
         </section>
