--- a/html/index.html
+++ b/html/index.html
@@ -18,23 +18,23 @@
     </header>
 
     <main>
-        <section class="hero">
+        <section class="principal">
             <h1>¡ESCUCHALO AHORA!</h1>
             <p>Todo lo que necesitas saber sobre diseño web.</p>
-            <div class="player">
+            <div class="reproductor">
                 <button class="play">▶</button>
                 <span>Reproducir</span>
             </div>
         </section>
 
-        <section class="topics">
-            <div class="topic">
+        <section class="episodios">
+            <div class="episodio">
                 <img src="/img/diseñoWeb.png" alt="DiseñoWeb">
             </div>
-            <div class="topic">
+            <div class="episodio">
                 <img src="/img/javaScript.png" alt="JavaScript">
             </div>
-            <div class="topic">
+            <div class="episodio">
                 <img src="/img/html.png" alt="HTML">
             </div>
         </section>
