--- a/html/index.html
+++ b/html/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Podcast Diseño Web</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <header>
         <nav>
             <ul class="menu">
                 <li><a href="#sobre-nosotros">Sobre nosotros</a></li>
-                <li><a href="#contacto">Contacto</a></li>
                 <li><a href="#video">Video</a></li>
+                <li><img src="../img/espana.png"></li>
+                <li><img src="../img/galicia.png"></li>
             </ul>
         </nav>
     </header>
@@ -29,13 +30,13 @@
 
         <section class="episodios">
             <div class="episodio">
-                <img src="/img/diseñoWeb.png" alt="DiseñoWeb">
+                <img src="../img/diseñoWeb.png" alt="DiseñoWeb">
             </div>
             <div class="episodio">
-                <img src="/img/javaScript.png" alt="JavaScript">
+                <img src="../img/javaScript.png" alt="JavaScript">
             </div>
             <div class="episodio">
-                <img src="/img/html.png" alt="HTML">
+                <img src="../img/html.png" alt="HTML">
             </div>
         </section>
     </main>
