Sistema de cambio de idioma
Sistema de cambio de idioma y info de episodios

--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,10 @@
             <ul class="menu">
                 <li><a href="#sobre-nosotros">Sobre nosotros</a></li>
                 <li><a href="#contacto">Contacto</a></li>
-                <li><a href="#video">Video</a></li>
+                <li>
+                    <a href="#video">Video</a>
+                    <span class="menu-icon">&#9776;</span> <!-- Ícono de menú -->
+                </li>
             </ul>
         </nav>
     </header>
