--- a/html/index.html
+++ b/html/index.html
@@ -29,20 +29,15 @@
         </section>
 
         <section class="episodios">
-            <div class="episodio">
-                <img src="../img/diseñoWeb.png" alt="DiseñoWeb">
-            </div>
-            <div class="episodio">
-                <img src="../img/javaScript.png" alt="JavaScript">
-            </div>
-            <div class="episodio">
-                <img src="../img/html.png" alt="HTML">
-            </div>
+                <img src="../img/diseñoWeb.png" alt="DiseñoWeb" data-background="../img/diseñoWebDegradado.png">
+                <img src="../img/javaScript.png" alt="JavaScript" data-background="../img/javaScriptDegradado.png">
+                <img src="../img/html.png" alt="HTML" data-background="../img/htmlDegradado.png">
         </section>
     </main>
 
     <footer>
         <p>Podcast CSS Moderno &copy; 2025</p>
     </footer>
+    <script src="../js/scripts.js"></script>
 </body>
 </html>
