Cambio estructura carpetas

--- a/html/index.html
+++ b/html/index.html
@@ -13,12 +13,12 @@
                 <li><a id="sobreNosotros" href="#sobre-nosotros">Sobre Nosotros</a></li>
                 <li><a id="videoBoton" href="#video">Video</a></li>
                 <li>
-                    <button onclick="location.href='../docs/index.html'" style="border: none; background: none; padding: 0; cursor: pointer;">
+                    <button onclick="location.href='./index.html'" style="border: none; background: none; padding: 0; cursor: pointer;">
                         <img src="../img/espana.png" alt="Español">
                     </button>
                 </li>
                 <li>
-                    <button onclick="location.href='../docs/index-gl.html'" style="border: none; background: none; padding: 0; cursor: pointer;">
+                    <button onclick="location.href='./index-gl.html'" style="border: none; background: none; padding: 0; cursor: pointer;">
                         <img src="../img/galicia.png" alt="Gallego">
                     </button>
                 </li>
