Implementado, reproductor web, sobre nosotros varios idomas, aviso de no disponibilidad

--- a/html/sobrenosotros-gl.html
+++ b/html/sobrenosotros-gl.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="gl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Podcast Diseño Web</title>
+    <title>Podcast Deseño Web</title>
     <link rel="stylesheet" href="../css/sobrenosotros.css">
 </head>
 <body>
     <header>
         <nav>
             <ul class="menu">
-                <li><a href="#sobre-nosotros">Sobre nosotros</a></li>
-                <li><a href="#video">Video</a></li>
+                <li><a href="#sobre-nosotros">Sobre nós</a></li>
+                <li><a href="#video">Vídeo</a></li>
                 <li>
                     <button onclick="location.href='./sobrenosotros.html'" style="border: none; background: none; padding: 0; cursor: pointer;">
                         <img src="../img/espana.png" alt="Español">
@@ -27,10 +27,10 @@
     </header>
 
     <main>
-     <h1>SOBRE NOSOTROS</h1>
-     <p>Nos gusta hablar de todo lo que tenga que ver con el diseño web en internet!</p>
+     <h1>SOBRE NÓS</h1>
+     <p>Gústanos falar de todo o que teña que ver co deseño web en internet!</p>
      <div>
-        <p>Estamos dispuestos a revolucionar el mundo de los podcasts, ponemos todo nuestro entusiasmo en hacer los episodios más entretenidos y informativos que encontrarás!</p>
+        <p>Estamos dispostos a revolucionar o mundo dos podcasts, poñemos todo o noso entusiasmo en facer os episodios máis entretidos e informativos que atoparás!</p>
         <img src="../img/imagen1.png">
     </div>
     </main>
