Se añade redirección desde index a sobre nosotros

--- a/html/index-gl.html
+++ b/html/index-gl.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <ul class="menu">
-                <li><a id="sobreNosotros" href="#sobre-nosotros">Sobre Nos</a></li>
+                <li><a id="sobreNosotros" href="./sobrenosotros-gl.html">Sobre Nos</a></li>
                 <li><a id="videoBoton" href="#video">Video</a></li>
                 <li>
                     <button onclick="location.href='./index.html'" style="border: none; background: none; padding: 0; cursor: pointer;">
