--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <ul class="menu">
-                <li><a id="sobreNosotros" href="#sobre-nosotros">Sobre Nosotros</a></li>
+                <li><a id="sobreNosotros" href="./sobrenosotros.html">Sobre Nosotros</a></li>
                 <li><a id="videoBoton" href="#video">Video</a></li>
                 <li>
                     <button onclick="location.href='./index.html'" style="border: none; background: none; padding: 0; cursor: pointer;">
