Cambios en header añadido boton inicio

--- a/html/index-gl.html
+++ b/html/index-gl.html
@@ -10,8 +10,8 @@
     <header>
         <nav>
             <ul class="menu">
+                <li><a id="inicio" href="./index-gl.html">Inicio</a></li>
                 <li><a id="sobreNosotros" href="./sobrenosotros-gl.html">Sobre Nos</a></li>
-                <li><a id="videoBoton" href="#video">Video</a></li>
                 <li>
                     <button onclick="location.href='./index.html'" style="border: none; background: none; padding: 0; cursor: pointer;">
                         <img src="../img/espana.png" alt="Español">
