--- a/html/sobrenosotros-gl.html
+++ b/html/sobrenosotros-gl.html
@@ -10,8 +10,8 @@
     <header>
         <nav>
             <ul class="menu">
-                <li><a href="#sobre-nosotros">Sobre nós</a></li>
-                <li><a href="#video">Vídeo</a></li>
+                <li><a id="inicio" href="./index-gl.html">Inicio</a></li>
+                <li><a id="sobreNosotros" href="./sobrenosotros-gl.html">Sobre Nosotros</a></li>
                 <li>
                     <button onclick="location.href='./sobrenosotros.html'" style="border: none; background: none; padding: 0; cursor: pointer;">
                         <img src="../img/espana.png" alt="Español">
