--- a/html/index-gl.html
+++ b/html/index-gl.html
@@ -47,7 +47,8 @@
 
 
     <footer>
-        <p>Podcast CSS Moderno &copy; 2025</p>
+        <p>Podcast CSS Moderno &copy; 2025 </p>
+        <p>Intro feita con Suno AI e un tono de <a href="https://freemusicarchive.org/music/daynigthmorning/business/for-podcast/">freemusicarchive.org </a></p>
     </footer>
     <script type="module" src="../js/scripts-gl.js" defer ></script>
 </body>
